--- a/readme.org
+++ b/readme.org
@@ -1,23 +1,67 @@
 #+TITLE: [c]hecklist
 #+OPTIONS: H:2 TOC:1 view:showall
 
-A Haskell [c]hecklist. For starting off, rebooting, or just tidying things up.
-
-* Changes
-
-The initial Haskell [c]hecklist was released around ghc-8.10, and, at time of writing, ghc-9.8.1 is in `ghcup list`.
-
-The checklist now concentrates on a cabal-style workflow. I personally no longer use stack and would be concerned that any stack-based advice would become stale. Stack is also, in my opinion, a complete workflow compared with cabal where gaps remain.
-
-The use of templates has been abandoned in favour of `cabal new`, with advice and snippets around additions.
-
-The combination of emacs org-mode and Haskell development has progressed, and for even more bespokity, I have switched to haskell-ng.
-
-Developments surrounding cabal are in a state of flux, and, until stability, I use cabal-fix for my cabal file needs.
+Haskell [c]hecklists. For starting off, rebooting, or just freshening up.
 
 * Quick Start
 
-To quickly install Haskell, follow the instructions at [[https://www.haskell.org/ghcup/][GHCup]].
+A very short list for creating and maintaining a Haskell project.
+
+- [ ] install Haskell via [[https://www.haskell.org/ghcup/][GHCup]].
+- [ ] create a new directory and run =cabal init=. Follow the prompts.
+- [ ] (optional) install a few more tools.
+- [ ] pick an IDE; vscode, neo-vim, emacs or unix command line. It all works.
+- [ ] (optional) read through the extras section, add specific project naming, and tangle this org file in the main project directory.
+- [ ] (optional) read through the cabal section below and maybe select some stanzas to add to the cabal file.
+- [ ] happily hack Haskell into your new pet project.
+- [ ] follow the checklist when you want to tidy up.
+
+* The Slow Guide
+
+welcome to Haskell!
+
+Or, as Iago quips, "welcome, sir, to Cyprus. Goats and Monkeys!" Haskell is this corner solution to several problem domains difficult to pin, existing beyond some line demarcating the civilised empires of software development. Much of it will not make sense at first, and maybe ever, but if you stay long enough, you'll begin to grow fond of even the goats and monkeys.
+
+Birthed by committee in 1987 for use as an academic tool, it has now grown to not only be the 28th most popular language for tutorials, but also used industrially by over 0.2% of github users, making it somewhere between the 25th and 50th most popular language on the planet.
+Even before deep subsumption queer-coded the place, the community has been diverse, with both American and European programmers in its ranks.
+
+At 37, you can't expect Haskell to have tight onboarding, or clean lines.  Getting the dad bod in shape, the wine-mom belly some room, knocking off a few of the rougher edges can be painful. Almost uniquely, though, the Haskell project seems dedicated to doing this, and time and again makes difficult decisions and taking risks that our corporate cousins would never take in the dark forest of software design.
+
+So, at times, old stalwarts drag themselves away from their rust, their OCaml and Idris Two, and start yelling about stuff, waking up even older, white male professors via their mailing-lists, and they whine, on what used to be Twitter, about how their tutorials need editing. Again. Or someone announces Haskell is dying, or dead already, or has bad tooling, and that some committee somewhere must act, or has acted in poor taste. Popcorn gets thrown, hands are wrung, and then it all settles down again; we all just resume whatever we were doing in whatever corners we play in before the bru-ha-ha begun.
+
+How it all works, how the work gets done, who is in charge, where is it all going; these are questions we don't care to look at too closely. At 37, sometimes a vibe is all you have left.
+
+Here's what you need to know, as you start your Haskell journey:
+
+- tooling is great, and getting to be first-in-class. Complainants usually have old setups they're trying to freshen up, haven't read the manual, or are grinding axes.
+- documentation is getting better, but used to be poor, and docs can be difficult to backport. Most internet advice is poorly curated by search algorithms and not current.
+- the secret sauce of Haskell is the language pragmas. Innovation gets wrapped up in new pragmas that the user can choose to turn on. GHC2021 is an important milestone.
+- you probably wont get a job in Haskell. Do it for love.
+- fancy Haskell is over-rated, and unfancy (pattern matching, composition-style, type-first coding, ghci) is a joy.
+- you will enjoy coding in Haskell, to the point where it becomes painful to code in anything else.
+- the code you write will be the best you ever write, and it will survive (subject to staying current with the GHC grind)
+- you will be disappointed with the number of bums actually on seats. Dependency management is very important - before you commit to any dependency, look at the upstream chain for signs of care and attention.
+- GHC is a monopolist provider of compilation support.
+- Compilation is strings all the way down. No matter how you dress them up, it's all strings at the end of the computation chain.
+
+Haskell, is above all, beautiful. Well-crafted, solid, unfancy, machine precisioned where it matters, sludgy and open to ideas where it doesn't.
+
+FIXME: find space or delete:
+
+What emerges is spiritual, at its best, narcissistic at its worst.
+
+As Marge Simpson would say, I just think it's neat.
+
+Never corporatised, no indentured slave to a global machine.
+
+stalwarts move on to the greener pastures of rust and idris, to futures that may contain employment.
+
+At the same time, GHC is a beast of a project, barely contained and going somewhere in a hurry; releases woosh by.
+
+detachable from the technical fashions of the day.
+
+** ghcup
+** cabal init
 
 To quickly create a new Haskell project, run `cabal init` interactively or:
 
@@ -33,7 +77,7 @@ A quick test of these installations is to compile and test the project using cab
 cabal build && cabal install && cabal test
 #+end_src
 
-* Tools
+** Tools
 
 Setup of a modern Haskell environment is straight forward. [[https://www.haskell.org/ghcup/][ghcup]] takes care of ghc, cabal, stack & the haskell-language-server. ~cabal~ can then be used to install other tools.
 
@@ -104,62 +148,24 @@ cd cabal-extras/cabal-docspec
 cabal install cabal-docspec:exe:cabal-docspec --overwrite-policy=always
 #+end_src
 
-** Doom emacs
+* A checklist
 
-Haskell setup for [[https://github.com/hlissner/doom-emacs#install][Doom]] emacs is straight-forward.
+This is a checklist I use for preparing a new release:
 
-in ~~/.config/doom/init.el~, uncomment the haskell line and add lsp:
+[[https://hackage.haskell.org/package/]]
+[[https://github.com/tonyday567/]]
 
-#+begin_src elisp
-(haskell +lsp)      ; a language that's lazier than I am
+#+begin_src sh :results output
+  cd ~/haskell/
 #+end_src
 
-in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
+- [ ] version check & bump
 
-#+begin_src elisp
-;; haskell
-;;
-(after! haskell
-  (setq
-   haskell-font-lock-symbols t
-   haskell-interactive-popup-errors nil
-   lsp-enable-folding nil
-   lsp-response-timeout 120
-   lsp-ui-sideline-enable nil           ; not anymore useful than flycheck
-   lsp-ui-doc-enable nil                ; slow and redundant with K
-   lsp-modeline-diagnostics-scope :project
-   +lsp-prompt-to-install-server 'quiet
-   flycheck-check-syntax-automatically '(save)
-   lsp-haskell-brittany-on nil
-   lsp-haskell-floskell-on nil
-   lsp-haskell-fourmolu-on nil
-   lsp-haskell-stylish-haskell-on nil
-   lsp-haskell-retrie-on nil
-   haskell-process-show-debug-tips nil
-   haskell-process-suggest-remove-import-lines nil
-   haskell-process-suggest-restart nil
-   haskell-process-type 'cabal-repl
-   )
-  (global-so-long-mode -1)
-  ;; makes underscore an alphanumeric
-  (add-hook! 'haskell-mode-hook (modify-syntax-entry ?_ "w"))
-)
-#+end_src
+  Check current hackage version and bump cabal file version.
 
-* checklist
-
-
-[[https://hackage.haskell.org/package/mealy]]
-[[https://github.com/tonyday567/mealy]]
-
-- [ ] version check&bump
-
-  #+begin_src sh :results output
-  cd ~/haskell/mealy
-  #+end_src
-
-  0.4.4.1
 - [ ] ghcup upgrades
+
+  Check if tooling is current.
 
   #+begin_src sh :results output
   ghcup list -c set -r
@@ -171,16 +177,19 @@ in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
   : hls 2.5.0.0 latest
   : stack 2.13.1 latest
   : ghcup 0.1.20.0 latest,recommended
+
 - [ ] cabal.project check
+
+  Is the cabal.project & cabal.project.local files clean?
 
   #+begin_src sh :results output
   cat cabal.project
   #+end_src
 
-  #+RESULTS:
-  : packages:
-  :   mealy.cabal
 - [ ] upstream publishings
+
+  Have upstream dependencies been published on Hackage?
+
 - [ ] cabal update
 
   #+begin_src sh :results output
@@ -193,29 +202,22 @@ in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
   : The index-state is set to 2023-12-19T03:05:53Z.
   : To revert to previous state run:
   :     cabal v2-update 'hackage.haskell.org,2023-12-18T22:41:30Z'
+
 - [ ] cabal outdated
     #+begin_src sh :results output
     cabal outdated
     #+end_src
 
-    #+RESULTS:
-    : Outdated dependencies:
-    : primitive >=0.7.2 && <0.9 (latest: 0.9.0.0)
 - [ ] cabal gen-bounds
     #+begin_src sh :results output
     cabal gen-bounds
     #+end_src
 
-    #+RESULTS:
-    : Resolving dependencies...
-    : Congratulations, all your dependencies have upper bounds!
 - [ ] cabal build --ghc-options=-Wunused-packages
     #+begin_src sh :results output
     cabal clean && cabal build --ghc-options=-Wunused-packages
     #+end_src
 
-    #+RESULTS:
-    : Up to date
 - [ ] cabal-fix
 
     #+begin_src sh :results output
@@ -233,14 +235,16 @@ in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
     cabal-fix -i
     #+end_src
 
-    #+RESULTS:
 - [ ] cabal build --prefer-oldest
 
     #+begin_src sh :results output
     cabal build --prefer-oldest
     #+end_src
+
 - [ ] FIXMEs & TODOs
+
 - [ ] pragma cleanup
+
 - [ ] cabal-docspec
 
     #+begin_src sh :results output
@@ -248,36 +252,22 @@ in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
     #+end_src
 
     #+RESULTS:
+
 - [ ] cabal install
     #+begin_src sh :results output
     cabal install
     #+end_src
+
 - [ ] cabal test
     #+begin_src sh :results output
     cabal test
     #+end_src
+
 - [ ] cabal bench
     #+begin_src sh :results output
     cabal bench
     #+end_src
 
-    #+RESULTS:
-    #+begin_example
-    Build profile: -w ghc-9.8.1 -O1
-    In order, the following will be built (use -v for more details):
-     - perf-0.12.0.1 (bench:perf-bench) (ephemeral targets)
-    Preprocessing benchmark 'perf-bench' for perf-0.12.0.1..
-    Building benchmark 'perf-bench' for perf-0.12.0.1..
-    [1 of 1] Compiling Main             ( app/bench.hs, /Users/tonyday/haskell/perf/dist-newstyle/build/x86_64-osx/ghc-9.8.1/perf-0.12.0.1/b/perf-bench/build/perf-bench/perf-bench-tmp/Main.o )
-    [1 of 2] Compiling Main             ( app/bench.hs, /Users/tonyday/haskell/perf/dist-newstyle/build/x86_64-osx/ghc-9.8.1/perf-0.12.0.1/b/perf-bench/build/perf-bench/perf-bench-tmp/Main.o )
-    [2 of 2] Linking /Users/tonyday/haskell/perf/dist-newstyle/build/x86_64-osx/ghc-9.8.1/perf-0.12.0.1/b/perf-bench/build/perf-bench/perf-bench [Objects changed]
-    Running 1 benchmarks...
-    Benchmark perf-bench: RUNNING...
-    label1          label2          old result      new result      change
-
-    sum             time            1.38e4          1.85e4          degraded
-    Benchmark perf-bench: ERROR
-    #+end_example
 - [ ] ormolu
 
   #+begin_src sh :results output
@@ -291,59 +281,80 @@ in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
   #+end_src
 
   #+RESULTS:
+
 - [ ] hlint
   #+begin_src sh :results output
   hlint .
   #+end_src
 
-  #+RESULTS:
-  : No hints
 - [ ] CI upgrade
 
   - check tested-with line in cabal file
+  - check ./.github/workflow/haskell-ci.yaml actions for updates
+
 - [ ] exact version bump
-  0.4.4.1
+
 - [ ] branch, push & check CI
+
 - [ ] haddock
 
   #+begin_src sh :results output
   cabal haddock
   #+end_src
+
 - [ ] readme
-- [ ] magit range
+
 - [ ] ChangeLog
+
 - [ ] PR to main
+
 - [ ] merge PR
+
 - [ ] immediate checkout and pull main
+
 - [ ] final check
 
   #+begin_src sh :results output
   cabal clean && cabal build && cabal-docspec
   #+end_src
+
 - [ ] hkgr tagdist
 
   #+begin_src sh :results output
   hkgr tagdist
   #+end_src
 
-  #+RESULTS:
-  : v0.12.0.1
-  : Running hlint
-  : Wrote tarball sdist to /Users/tonyday/haskell/perf/.hkgr/perf-0.12.0.1.tar.gz
 - [ ] hkgr publish
 
   #+begin_src sh :results output
-  hkgr tagdist
+  hkgr publish
   #+end_src
-- [ ] check Hackage
-        Sometimes haddocks don't build on Hackage. Here's a recipe for uploading your own docs.
 
-        #+begin_src sh
-        cabal haddock --builddir=docs --haddock-for-hackage --enable-doc
-        cabal upload -d --publish docs/*-docs.tar.gz
-        #+end_src
+  This won't work if there are cabal.project specifications. So:
+
+  #+begin_src sh :results output
+  cabal upload .hkgr/prettychart-0.2.0.0.tar.gz --publish
+  #+end_src
+
+- [ ] check Hackage
+
+  Sometimes haddocks don't build on Hackage. Here's a recipe for uploading your own docs.
+
+  #+begin_src sh
+  cabal haddock --builddir=docs --haddock-for-hackage --enable-doc
+  cabal upload -d --publish docs/*-docs.tar.gz
+  #+end_src
 
 * extra Files
+
+** macro vars
+
+[[https://orgmode.org/manual/Macro-Replacement.html][Macro Replacement (The Org Manual)]]
+
+#+MACRO: name xyzzy
+#+MACRO: lib-name Xyzzy
+#+MACRO: github-username tonyday567
+
 ** readme.md
 
 Practice varies widely, from saying nothing to all documentation being in the readme. This readme.md template:
@@ -351,48 +362,39 @@ Practice varies widely, from saying nothing to all documentation being in the re
 - adds some badges for Hackage & CI.
 - Includes a short description and basic Usage example, which in many cases should be exactly repeated in the cabal file as synopsis and description stanzas.
 
-#+begin_src org :tangle readme.md
-{{name}}
+#+begin_src org :tangle extras/readme.md
+{{{name}}}
 ===
 
-[![Hackage](https://img.shields.io/hackage/v/{{name}}.svg)](https://hackage.haskell.org/package/{{name}})
-[![Build Status](https://github.com/{{github-username}}/{{name}}/workflows/haskell-ci/badge.svg)](https://github.com/{{github-username}}/{{name}}/actions?query=workflow%3Ahaskell-ci)
+[![Hackage](https://img.shields.io/hackage/v/{{{name}}}.svg)](https://hackage.haskell.org/package/{{{name}}})
+[![Build Status](https://github.com/{{{github-username}}}/{{{name}}}/workflows/haskell-ci/badge.svg)](https://github.com/{{{github-username}}}/{{{name}}}/actions?query=workflow%3Ahaskell-ci)
 
-`{{name}}` is a new package.
+`{{{name}}}` is a new package.
 
 Usage
 ==
 
 ``` haskell
-import {{#lib-name}}{{lib-name}}{{#lib-name2}}.{{lib-name2}}{{/lib-name2}}{{/lib-name}}{{^lib-name}}Lib{{/lib-name}}
+import {{{lib-name}}}
 ```
-#+end_src
-
-
-readmes can be included as documentation within a cabal file like so:
-
-#+begin_src sh :results output
-extra-doc-files:
-    ChangeLog.md
-    readme.md
 #+end_src
 
 ** readme.org
 
 an alternative readme.
 
-#+begin_src org :tangle readme.org
-,* {{name}}
+#+begin_src org :tangle extras/readme.org
+,* {{{name}}}
 
-[[https://hackage.haskell.org/package/{{name}}][https://img.shields.io/hackage/v/{{name}}.svg]]
-[[https://github.com/{{github-username}}/{{name}}/actions?query=workflow%3Ahaskell-ci][https://github.com/{{github-username}}/{{name}}/workflows/haskell-ci/badge.svg]]
+[[https://hackage.haskell.org/package/{{{name}}}][https://img.shields.io/hackage/v/{{{name}}}.svg]]
+[[https://github.com/{{{github-username}}}/{{{name}}}/actions?query=workflow%3Ahaskell-ci][https://github.com/{{{github-username}}}/{{{name}}}/workflows/haskell-ci/badge.svg]]
 
-~{{name}}~ is a new package.
+~{{{name}}}~ is a new package.
 
 ,* Usage
 
 ,#+begin_src haskell :results output
-import {{#lib-name}}{{lib-name}}{{#lib-name2}}.{{lib-name2}}{{/lib-name2}}{{/lib-name}}{{^lib-name}}Lib{{/lib-name}}
+import {{{lib-name}}}
 ,#+end_src
 
 ,* Development
@@ -412,27 +414,23 @@ putStrLn x
 
 #+end_src
 
-
 ** .hlint.yaml
 
-#+begin_src :tangle .hlint.yaml
+#+begin_src :tangle extras/.hlint.yaml
 - ignore: {name: Use if}
 - ignore: {name: Use bimap}
 - ignore: {name: Eta reduce}
-- ignore: {name: Redundant fromInteger}
 #+end_src
 
 ** .ghci
 
-#+begin_src :tangle .ghci
-:set -XRebindableSyntax
-:set -XOverloadedStrings
+#+begin_src :tangle extras/.ghci
 :set -Wno-type-defaults
 #+end_src
 
 ** .gitignore
 
-#+begin_src org :tangle .gitignore
+#+begin_src org :tangle extras/.gitignore
 /.stack-work/
 /dist-newstyle/
 stack.yaml.lock
@@ -443,27 +441,13 @@ cabal.project.local*
 /.hkgr/
 #+end_src
 
-** .gitattributes
-
-#+begin_src org :tangle .gitattributes
-{-# START_FILE .gitattributes #-}
-other/* linguist-documentation
-#+end_src
-
-** .projectile
-
-In emacs, haskell-language-server uses projectile to discover the project root directory, which is indicated by an empty ~.projectile~ file.
-
-#+begin_src org :tangle .projectile
-#+end_src
-
 ** .github/workflows/haskell-ci.yml
 
 This CI includes tests for ormolu, hlint, cabal-doctest and the usual cabal checks across a wide GHC range.
 
 [[https://docs.github.com/en/actions][GitHub Actions Documentation - GitHub Docs]]
 
-#+begin_src org :tangle .github/workflows/haskell-ci.yml
+#+begin_src org :tangle extras/.github/workflows/haskell-ci.yml
 on: [push]
 name: haskell-ci
 jobs:
@@ -572,11 +556,19 @@ jobs:
 
 ~cabal~ [[https://cabal.readthedocs.io/en/3.4/][docs]] have gotten very good of late, and these recommended stanzas should be read with those docs handy.
 
+Stanzas are used like so:
+
+#+begin_src cabal-ng
+library
+  import: ghc2021-stanza
+  import: ghc-options-stanza
+#+end_src
+
 ** ghc2021-stanza
 
 This stanza reproduces the GHC2021 extensions for ghc's prior to 9.2.
 
-#+begin_src org
+#+begin_src cabal-ng
 common ghc2021-stanza
   if impl(ghc >=9.2)
     default-language:
@@ -640,7 +632,7 @@ common ghc2021-stanza
 
 ** ghc-options-stanza
 
-#+begin_src org
+#+begin_src cabal-ng
 common ghc-options-stanza
   ghc-options:
     -Wall
@@ -650,17 +642,9 @@ common ghc-options-stanza
     -Wredundant-constraints
 #+end_src
 
-Stanzas are used like so:
-
-#+begin_src org
-library
-  import: ghc2021-stanza
-  import: ghc-options-stanza
-#+end_src
-
 ** ghc-options-exe-stanza
 
-#+begin_src org
+#+begin_src cabal-ng
 common ghc-options-exe-stanza
     ghc-options:
         -fforce-recomp
@@ -670,7 +654,17 @@ common ghc-options-exe-stanza
         -with-rtsopts=-N
 #+end_src
 
-* org-mode notes
+** extras-doc-files
+
+readmes can be included as documentation within a cabal file like so:
+
+#+begin_src cabal-ng
+extra-doc-files:
+    ChangeLog.md
+    readme.md
+#+end_src
+
+* ToDo emacs
 
 ** setup
 
@@ -750,8 +744,69 @@ This is required if you are working with a project, and compiling a library does
 (setq haskell-process-args-cabal-repl '("poker-fold:exe:poker-fold-speed"))
 #+end_src
 
-* ToDo haskell-ng
+** org-mode narrative
+
+org-mode provides a =curation= of historical ghci work, in between the complete backlog of computations, and a polished up module.
+
+It also enables a form of parallel type-tetris that can't be had with any repl.
+
+Note taking can be wider, and encompass shell commands, copy/pasted code snippets, sites visited, random thoughts and unexplored byways.
+** Doom emacs
+
+Haskell setup for [[https://github.com/hlissner/doom-emacs#install][Doom]] emacs is straight-forward.
+
+in ~~/.config/doom/init.el~, uncomment the haskell line and add lsp:
+
+#+begin_src elisp
+(haskell +lsp)      ; a language that's lazier than I am
+#+end_src
+
+in ~/.config/doom/config.el~, place any personal config preferences. Mine are:
+
+#+begin_src elisp
+;; haskell
+;;
+(after! haskell
+  (setq
+   haskell-font-lock-symbols t
+   haskell-interactive-popup-errors nil
+   lsp-enable-folding nil
+   lsp-response-timeout 120
+   lsp-ui-sideline-enable nil           ; not anymore useful than flycheck
+   lsp-ui-doc-enable nil                ; slow and redundant with K
+   lsp-modeline-diagnostics-scope :project
+   +lsp-prompt-to-install-server 'quiet
+   flycheck-check-syntax-automatically '(save)
+   lsp-haskell-brittany-on nil
+   lsp-haskell-floskell-on nil
+   lsp-haskell-fourmolu-on nil
+   lsp-haskell-stylish-haskell-on nil
+   lsp-haskell-retrie-on nil
+   haskell-process-show-debug-tips nil
+   haskell-process-suggest-remove-import-lines nil
+   haskell-process-suggest-restart nil
+   haskell-process-type 'cabal-repl
+   )
+  (global-so-long-mode -1)
+  ;; makes underscore an alphanumeric
+  (add-hook! 'haskell-mode-hook (modify-syntax-entry ?_ "w"))
+)
+#+end_src
+
+* Changes
+
+The initial Haskell [c]hecklist was released around ghc-8.10, and, at time of writing, ghc-9.8.1 is in `ghcup list`.
+
+The checklist now concentrates on a cabal-style workflow. I personally no longer use stack and would be concerned that any stack-based advice would become stale. Stack is also, in my opinion, a complete workflow compared with cabal where gaps remain.
+
+The use of templates has been abandoned in favour of `cabal new`, with advice and snippets around additions.
+
+The combination of emacs org-mode and Haskell development has progressed, and for even more bespokity, I have switched to haskell-ng.
+
+Developments surrounding cabal are in a state of flux, and, until stability, I use cabal-fix for my cabal file needs.
+
+** ToDo haskell-ng
 
 I am experimenting with haskell-ng mode, a replacement for haskell-mode, which utilises tree-sitter.
 
-* ToDo cabal-fix
+** ToDo cabal-fix
